# Shadow-Scanner

./: README.md
assets/: Standard_vTexture.frag  Standard_vTexture.vert  assets.qrc  camera.icns  turntable_160x32mm.wrl
forms/: AboutDialog.ui  CamCalibPanel.ui  CameraPanel.ui  LaserPanel.ui  MainWindow.ui  SerialPortCommandLine.ui  SerialPortSettings.ui  TurntableScanningPanel.ui
src/: CMakeLists.txt
src/app/: AboutDialog.cpp  AboutDialog.hpp  Application.cpp  Application.hpp  CMakeLists.txt  CalibrationData.cpp  CalibrationData.hpp  CalibrationDataCamera.cpp  CalibrationDataCamera.hpp  CalibrationDataLaserLine.cpp  CalibrationDataLaserLine.hpp  CalibrationDataTurntable.cpp  CalibrationDataTurntable.hpp  CamCalibPanel.cpp  CamCalibPanel.hpp  CameraCalib.cpp  CameraCalib.hpp  CameraPanel.cpp  CameraPanel.hpp  CameraRecorder.cpp  CameraRecorder.hpp  ChessboardCorners.cpp  ChessboardCorners.hpp  ImgGLWidget.cpp  ImgGLWidget.hpp  LaserPanel.cpp  LaserPanel.hpp  LaserTriangulator.cpp  LaserTriangulator.hpp  Log.hpp  MainWindow.cpp  MainWindow.hpp  PlotMaker.cpp  PlotMaker.hpp  SerialPortCommandLine.cpp  SerialPortCommandLine.hpp  SerialPortSettings.cpp  SerialPortSettings.hpp  TurntableCalib.cpp  TurntableCalib.hpp  (+21 more)
src/cam/: CMakeLists.txt  CameraInterface.hpp  DShowCamera.cpp  DShowCamera.hpp  LVUVCPublic.h  Log.hpp  QtCamera.cpp  QtCamera.hpp  V4L2Camera.cpp  V4L2Camera.hpp  cam.cpp  cam.hpp
src/homework/: CMakeLists.txt  homework1.cpp  homework1.hpp  homework2.cpp  homework2.hpp  homework3.cpp  homework3.hpp  homework4.cpp  homework4.hpp
src/img/: ARGB.hpp  CMakeLists.txt  Image.cpp  Image.hpp  ImageBuffer.cpp  ImageBuffer.hpp  Img.cpp  Img.hpp  ImgArgb.cpp  ImgArgb.hpp  ImgBit.cpp  ImgBit.hpp  ImgBitplane.cpp  ImgBitplane.hpp  ImgBuckets.cpp  ImgBuckets.hpp  ImgCheckerboards.cpp  ImgCheckerboards.hpp  ImgDraw.cpp  ImgDraw.hpp  ImgFloat.cpp  ImgFloat.hpp  ImgInt.cpp  ImgInt.hpp  util.cpp  util.hpp  yuv.cpp  yuv.hpp
src/io/: AppLoader.cpp  AppLoader.h  AppSaver.cpp  AppSaver.h  CMakeLists.txt  Loader.h  LoaderWrl.cpp  LoaderWrl.h  Saver.h  SaverWrl.cpp  SaverWrl.h  StrException.h  Tokenizer.cpp  Tokenizer.h
src/matlab-io/: CMakeLists.txt  MatlabIO.cpp  MatlabIO.hpp  test.cpp  test.hpp  typetraits.hpp  util.cpp  util.hpp
src/util/: BBox.cpp  BBox.h  CMakeLists.txt  CircleNeighborhood.cpp  CircleNeighborhood.hpp  Graph.cpp  Graph.hpp  GraphEdge.hpp  GraphFaces.cpp  GraphFaces.hpp  GraphFaces.java  GraphPlanar.cpp  GraphPlanar.hpp  GraphTraversal.cpp  GraphTraversal.hpp  Heap.cpp  Heap.hpp  LineDetector6.cpp  LineDetector6.hpp  Mesh.cpp  Mesh.hpp  MeshSelection.cpp  MeshSelection.hpp  Partition.cpp  Partition.hpp  PartitionLists.cpp  PartitionLists.hpp  PartitionLists.java  Polylines.cpp  Polylines.hpp  StaticRotation.cpp  StaticRotation.h  Vec.cpp  Vec.hpp
src/viewer/: WrlAboutDialog.cpp  WrlAboutDialog.hpp  WrlMainWindow.cpp  WrlMainWindow.hpp  WrlViewerApp.cpp
src/wrl/: Appearance.cpp  Appearance.h  CMakeLists.txt  Group.cpp  Group.h  HexahedralMesh.cpp  HexahedralMesh.h  ImageTexture.cpp  ImageTexture.h  IndexedFaceSet.cpp  IndexedFaceSet.h  IndexedLineSet.cpp  IndexedLineSet.h  IsoSurf.cpp  IsoSurf.h  Material.cpp  Material.h  Node.cpp  Node.h  PixelTexture.cpp  PixelTexture.h  Rotation.cpp  Rotation.h  SceneGraph.cpp  SceneGraph.h  SceneGraphProcessor.cpp  SceneGraphProcessor.h  SceneGraphTraversal.cpp  SceneGraphTraversal.h  Shape.cpp  Shape.h  SimpleGraphMap.cpp  SimpleGraphMap.h  Transform.cpp  Transform.h  wrl.pro
